Evaluation full labeled dataset

--- a/eval/everything_mixed.ipynb
+++ b/eval/everything_mixed.ipynb
@@ -1,28 +1,42 @@
 {
  "cells": [
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-10T21:21:12.911426Z",
+     "start_time": "2025-06-10T21:21:12.908276Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "90853fc053f6ebac",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-09T12:45:04.161029Z",
-     "start_time": "2025-06-09T12:45:04.154425Z"
+     "end_time": "2025-06-11T19:19:09.213840Z",
+     "start_time": "2025-06-11T19:19:08.550745Z"
     }
    },
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "import xgboost as xgb"
    ],
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-09T12:46:09.389072Z",
-     "start_time": "2025-06-09T12:46:09.360677Z"
+     "end_time": "2025-06-11T19:19:09.279848Z",
+     "start_time": "2025-06-11T19:19:09.230852Z"
     }
    },
    "cell_type": "code",
@@ -37,13 +51,13 @@
    ],
    "id": "fb6a3ed4a38efb1c",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-09T12:45:05.532225Z",
-     "start_time": "2025-06-09T12:45:05.529151Z"
+     "end_time": "2025-06-11T19:19:09.823274Z",
+     "start_time": "2025-06-11T19:19:09.814768Z"
     }
    },
    "cell_type": "code",
@@ -55,8 +69,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-09T12:45:25.528892Z",
-     "start_time": "2025-06-09T12:45:25.517772Z"
+     "end_time": "2025-06-11T19:19:09.880596Z",
+     "start_time": "2025-06-11T19:19:09.856679Z"
     }
    },
    "cell_type": "code",
@@ -162,18 +176,18 @@
        "</div>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-09T12:45:26.764772Z",
-     "start_time": "2025-06-09T12:45:26.753864Z"
+     "end_time": "2025-06-11T19:19:10.189818Z",
+     "start_time": "2025-06-11T19:19:10.154610Z"
     }
    },
    "cell_type": "code",
@@ -275,12 +289,12 @@
        "</div>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -294,8 +308,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-09T12:46:55.902259Z",
-     "start_time": "2025-06-09T12:46:55.863103Z"
+     "end_time": "2025-06-11T19:19:16.210555Z",
+     "start_time": "2025-06-11T19:19:10.383196Z"
     }
    },
    "cell_type": "code",
@@ -328,7 +342,7 @@
      ]
     }
    ],
-   "execution_count": 16
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -339,8 +353,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-09T12:47:13.439754Z",
-     "start_time": "2025-06-09T12:47:13.367312Z"
+     "end_time": "2025-06-11T19:19:16.373264Z",
+     "start_time": "2025-06-11T19:19:16.276230Z"
     }
    },
    "cell_type": "code",
@@ -377,15 +391,20 @@
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 6
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-11T19:19:16.437273Z",
+     "start_time": "2025-06-11T19:19:16.434315Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "44478c269e861097"
+   "id": "44478c269e861097",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -396,8 +415,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-09T12:47:24.000230Z",
-     "start_time": "2025-06-09T12:47:23.959898Z"
+     "end_time": "2025-06-11T19:19:16.576667Z",
+     "start_time": "2025-06-11T19:19:16.528714Z"
     }
    },
    "cell_type": "code",
@@ -434,15 +453,20 @@
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 7
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-11T19:19:16.631688Z",
+     "start_time": "2025-06-11T19:19:16.627632Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "f3edec491e7800b5"
+   "id": "f3edec491e7800b5",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -457,8 +481,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-09T12:47:34.295230Z",
-     "start_time": "2025-06-09T12:47:34.261950Z"
+     "end_time": "2025-06-11T19:19:16.714728Z",
+     "start_time": "2025-06-11T19:19:16.668221Z"
     }
    },
    "cell_type": "code",
@@ -489,13 +513,13 @@
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-09T12:47:36.973141Z",
-     "start_time": "2025-06-09T12:47:36.969986Z"
+     "end_time": "2025-06-11T19:19:16.728881Z",
+     "start_time": "2025-06-11T19:19:16.725741Z"
     }
    },
    "cell_type": "code",
@@ -513,8 +537,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-09T12:48:32.972666Z",
-     "start_time": "2025-06-09T12:48:32.969658Z"
+     "end_time": "2025-06-11T19:19:16.753610Z",
+     "start_time": "2025-06-11T19:19:16.749304Z"
     }
    },
    "cell_type": "code",
@@ -535,8 +559,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-09T12:53:20.461670Z",
-     "start_time": "2025-06-09T12:48:37.467974Z"
+     "end_time": "2025-06-11T19:24:49.906357Z",
+     "start_time": "2025-06-11T19:19:16.833425Z"
     }
    },
    "cell_type": "code",
@@ -566,17 +590,17 @@
      "output_type": "stream",
      "text": [
       "merged_shuffled\n",
-      "{'score': np.float64(0.001818304118631093), 'median_DCR_to_real_data': {'synthetic_data': np.float64(0.0005766572148169832), 'random_data_baseline': np.float64(0.31714013563975124)}}\n"
+      "{'score': np.float64(0.0018171444432494605), 'median_DCR_to_real_data': {'synthetic_data': np.float64(0.0005766572148169832), 'random_data_baseline': np.float64(0.3173425299013606)}}\n"
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-09T12:53:20.507960Z",
-     "start_time": "2025-06-09T12:53:20.503996Z"
+     "end_time": "2025-06-11T19:24:50.019767Z",
+     "start_time": "2025-06-11T19:24:50.016769Z"
     }
    },
    "cell_type": "code",
@@ -594,8 +618,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-09T12:53:44.187189Z",
-     "start_time": "2025-06-09T12:53:20.548031Z"
+     "end_time": "2025-06-11T19:25:16.424195Z",
+     "start_time": "2025-06-11T19:24:50.069153Z"
     }
    },
    "cell_type": "code",
@@ -644,7 +668,140 @@
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-11T19:26:39.377085Z",
+     "start_time": "2025-06-11T19:26:38.287059Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sdmetrics.single_table import DisclosureProtection\n",
+    "from sdmetrics.single_table.data_augmentation import BinaryClassifierRecallEfficacy\n",
+    "from sdv.metadata import SingleTableMetadata\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "\n",
+    "\n",
+    "df_merged = 'merged_shuffled_labeled'\n",
+    "# df_2 = pd.read_csv('../dataset/informative_cluster_2.csv')\n",
+    "selected_file = df_merged\n",
+    "df= pd.read_csv(\"../dataset/\" + selected_file + \".csv\")\n",
+    "df_fake = pd.read_csv(\"../dataset/fake_\" + selected_file + \".csv\")\n",
+    "\n",
+    "efficacy_scores = []\n",
+    "\n",
+    "\n",
+    "# Step 1: Train-test split from real data for validation\n",
+    "train_set, real_holdout_set = train_test_split(df, test_size=0.2, stratify=df[\"isFraud\"], random_state=42)\n",
+    "\n",
+    "# Step 2: Build metadata (you can also load it from a file if needed)\n",
+    "metadata = SingleTableMetadata()\n",
+    "metadata.detect_from_dataframe(train_set)\n",
+    "\n",
+    "# Step 3: Compute Efficacy score\n",
+    "score = BinaryClassifierRecallEfficacy.compute_breakdown(\n",
+    "    real_training_data=train_set,\n",
+    "    synthetic_data=df_fake,\n",
+    "    real_validation_data=real_holdout_set,\n",
+    "    metadata=metadata.to_dict(),\n",
+    "    prediction_column_name=\"isFraud\",\n",
+    "    minority_class_label=1,\n",
+    "    classifier=\"XGBoost\",\n",
+    "    fixed_precision_value=0.9\n",
+    ")\n",
+    "\n",
+    "print(score[\"score\"])\n",
+    "efficacy_scores.append(score)\n"
+   ],
+   "id": "52a402c60c5c2c98",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.49939135727328055\n"
+     ]
+    }
+   ],
+   "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-11T19:26:24.189127Z",
+     "start_time": "2025-06-11T19:26:23.576193Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sdmetrics.single_table import DisclosureProtection\n",
+    "from sdmetrics.single_table.data_augmentation import BinaryClassifierPrecisionEfficacy\n",
+    "from sdv.metadata import SingleTableMetadata\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "\n",
+    "\n",
+    "df_merged = 'merged_shuffled_labeled'\n",
+    "# df_2 = pd.read_csv('../dataset/informative_cluster_2.csv')\n",
+    "selected_file = df_merged\n",
+    "df= pd.read_csv(\"../dataset/\" + selected_file + \".csv\")\n",
+    "df_fake = pd.read_csv(\"../dataset/fake_\" + selected_file + \".csv\")\n",
+    "\n",
+    "efficacy_scores = []\n",
+    "\n",
+    "\n",
+    "# Step 1: Train-test split from real data for validation\n",
+    "train_set, real_holdout_set = train_test_split(df, test_size=0.2, stratify=df[\"isFraud\"], random_state=42)\n",
+    "\n",
+    "# Step 2: Build metadata (you can also load it from a file if needed)\n",
+    "metadata = SingleTableMetadata()\n",
+    "metadata.detect_from_dataframe(train_set)\n",
+    "\n",
+    "# Step 3: Compute Efficacy score\n",
+    "score = BinaryClassifierPrecisionEfficacy.compute_breakdown(\n",
+    "    real_training_data=train_set,\n",
+    "    synthetic_data=df_fake,\n",
+    "    real_validation_data=real_holdout_set,\n",
+    "    metadata=metadata.to_dict(),\n",
+    "    prediction_column_name=\"isFraud\",\n",
+    "    minority_class_label=1,\n",
+    "    classifier=\"XGBoost\",\n",
+    "    fixed_recall_value=0.9\n",
+    ")\n",
+    "\n",
+    "print(score[\"score\"])\n",
+    "efficacy_scores.append(score)\n"
+   ],
+   "id": "135e58d37ff37d1e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4981640146878825\n"
+     ]
+    }
+   ],
+   "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-11T19:25:17.940838Z",
+     "start_time": "2025-06-11T19:25:17.936834Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "762d13920ab38877",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -652,7 +809,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "52a402c60c5c2c98"
+   "id": "fd5a6fc4d70e69da"
   }
  ],
  "metadata": {
