Saving labeled clusters

--- a/clusters/clusters_generations.ipynb
+++ b/clusters/clusters_generations.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:52:36.615610Z",
-     "start_time": "2025-06-06T13:52:36.610393Z"
+     "end_time": "2025-06-11T19:32:26.429985Z",
+     "start_time": "2025-06-11T19:32:26.010612Z"
     }
    },
    "source": [
@@ -21,26 +21,26 @@
     "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
-   "execution_count": 131
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:52:36.779835Z",
-     "start_time": "2025-06-06T13:52:36.766804Z"
+     "end_time": "2025-06-09T09:03:50.954055Z",
+     "start_time": "2025-06-09T09:03:50.940217Z"
     }
    },
    "cell_type": "code",
    "source": "df_m = pd.read_csv('../dataset/minority.csv')\n",
    "id": "317bd99910aabcf1",
    "outputs": [],
-   "execution_count": 132
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:53:05.065658Z",
-     "start_time": "2025-06-06T13:53:05.050400Z"
+     "end_time": "2025-06-09T10:54:58.006963Z",
+     "start_time": "2025-06-09T10:54:57.991144Z"
     }
    },
    "cell_type": "code",
@@ -53,7 +53,7 @@
    ],
    "id": "ac0e487d664cc74c",
    "outputs": [],
-   "execution_count": 146
+   "execution_count": 59
   },
   {
    "metadata": {},
@@ -64,8 +64,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:53:05.112697Z",
-     "start_time": "2025-06-06T13:53:05.106650Z"
+     "end_time": "2025-06-09T10:54:58.396576Z",
+     "start_time": "2025-06-09T10:54:58.390579Z"
     }
    },
    "cell_type": "code",
@@ -75,13 +75,13 @@
    ],
    "id": "9d94976c69e35df1",
    "outputs": [],
-   "execution_count": 147
+   "execution_count": 60
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:53:05.163687Z",
-     "start_time": "2025-06-06T13:53:05.157220Z"
+     "end_time": "2025-06-09T10:54:58.730213Z",
+     "start_time": "2025-06-09T10:54:58.720722Z"
     }
    },
    "cell_type": "code",
@@ -96,18 +96,18 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 148
+   "execution_count": 61
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:53:05.214841Z",
-     "start_time": "2025-06-06T13:53:05.205369Z"
+     "end_time": "2025-06-09T10:54:58.967353Z",
+     "start_time": "2025-06-09T10:54:58.957316Z"
     }
    },
    "cell_type": "code",
@@ -129,7 +129,7 @@
    ],
    "id": "5e686c8c1e1b465",
    "outputs": [],
-   "execution_count": 149
+   "execution_count": 62
   },
   {
    "metadata": {},
@@ -140,8 +140,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:53:05.262233Z",
-     "start_time": "2025-06-06T13:53:05.252358Z"
+     "end_time": "2025-06-09T10:54:59.491304Z",
+     "start_time": "2025-06-09T10:54:59.480579Z"
     }
    },
    "cell_type": "code",
@@ -249,18 +249,18 @@
        "</div>"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 150
+   "execution_count": 63
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:53:06.255816Z",
-     "start_time": "2025-06-06T13:53:06.248335Z"
+     "end_time": "2025-06-09T10:54:59.985437Z",
+     "start_time": "2025-06-09T10:54:59.977182Z"
     }
    },
    "cell_type": "code",
@@ -279,18 +279,18 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 151
+   "execution_count": 64
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:53:07.135410Z",
-     "start_time": "2025-06-06T13:53:07.129034Z"
+     "end_time": "2025-06-09T10:55:00.084477Z",
+     "start_time": "2025-06-09T10:55:00.078101Z"
     }
    },
    "cell_type": "code",
@@ -309,12 +309,12 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 152
+   "execution_count": 65
   },
   {
    "metadata": {},
@@ -338,8 +338,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:53:31.274214Z",
-     "start_time": "2025-06-06T13:53:19.188539Z"
+     "end_time": "2025-06-09T10:55:13.012731Z",
+     "start_time": "2025-06-09T10:55:01.365462Z"
     }
    },
    "cell_type": "code",
@@ -394,13 +394,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 153
+   "execution_count": 66
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:53:31.286670Z",
-     "start_time": "2025-06-06T13:53:31.282244Z"
+     "end_time": "2025-06-09T10:55:13.030781Z",
+     "start_time": "2025-06-09T10:55:13.025739Z"
     }
    },
    "cell_type": "code",
@@ -418,7 +418,7 @@
      ]
     }
    ],
-   "execution_count": 154
+   "execution_count": 67
   },
   {
    "metadata": {},
@@ -550,15 +550,26 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:52:31.461244Z",
-     "start_time": "2025-06-06T13:52:31.458243Z"
+     "end_time": "2025-06-11T19:37:14.745867Z",
+     "start_time": "2025-06-11T19:37:14.567392Z"
     }
    },
    "cell_type": "code",
-   "source": "\n",
+   "source": [
+    "df_m_0 = \"min_0\"\n",
+    "df_m_1 = \"min_1\"\n",
+    "df_m_2 = 'min_2'\n",
+    "df_0 = 'informative_cluster_0'\n",
+    "df_1 = 'informative_cluster_1'\n",
+    "files = [df_m_0, df_m_1, df_m_2, df_0, df_1]\n",
+    "\n",
+    "for name in files:\n",
+    "    pd.read_csv(f\"../dataset/{name}.csv\").drop(columns=[\"Unnamed: 0\"], errors=\"ignore\").assign(\n",
+    "    isFraud=1 if \"min\" in name else 0).to_csv(f\"../dataset/{name}_labeled.csv\", index=False)"
+   ],
    "id": "bff88af69ee82301",
    "outputs": [],
-   "execution_count": 130
+   "execution_count": 3
   },
   {
    "metadata": {
