--- a/clusters/clusters_generations.ipynb
+++ b/clusters/clusters_generations.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-11T19:32:26.429985Z",
-     "start_time": "2025-06-11T19:32:26.010612Z"
+     "end_time": "2025-06-13T14:39:38.871025Z",
+     "start_time": "2025-06-13T14:39:38.564992Z"
     }
    },
    "source": [
@@ -574,15 +574,23 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:51:44.473573Z",
-     "start_time": "2025-06-06T13:51:44.470696Z"
+     "end_time": "2025-06-13T14:39:41.595907Z",
+     "start_time": "2025-06-13T14:39:41.448692Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "df_m = \"df_min\"\n",
+    "df_majority = \"df_majority\"\n",
+    "files = [df_m, df_majority,]\n",
+    "\n",
+    "for name in files:\n",
+    "    pd.read_csv(f\"../dataset/{name}.csv\").drop(columns=[\"Unnamed: 0\"], errors=\"ignore\").assign(\n",
+    "    isFraud=1 if \"min\" in name else 0).to_csv(f\"../dataset/{name}_labeled.csv\", index=False)"
+   ],
    "id": "ba7561433efe6462",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 2
   },
   {
    "metadata": {},
