--- a/eval/majority_vs_minority.ipynb
+++ b/eval/majority_vs_minority.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-13T06:44:25.079651Z",
-     "start_time": "2025-06-13T06:44:24.429170Z"
+     "end_time": "2025-06-13T14:25:21.728006Z",
+     "start_time": "2025-06-13T14:25:17.560202Z"
     }
    },
    "source": [
@@ -17,38 +17,34 @@
     "import matplotlib.pyplot as plt\n"
    ],
    "outputs": [],
-   "execution_count": 12
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-13T06:30:13.767922Z",
-     "start_time": "2025-06-13T06:30:13.685296Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "df_m_0 = \"min_0\"\n",
-    "df_m_1 = \"min_1\"\n",
-    "df_m_2 = 'min_2'\n",
-    "# df_m_3 = pd.read_csv('../dataset/min_3.csv')\n",
-    "df_0 = 'informative_cluster_0'\n",
-    "df_1 = 'informative_cluster_1'\n",
-    "# df_2 = pd.read_csv('../dataset/informative_cluster_2.csv')\n",
-    "selected_file = df_m_0\n",
-    "files = [df_m_0, df_m_1, df_m_2, df_0, df_1]\n",
-    "df= pd.read_csv(\"../dataset/\" + selected_file + \".csv\")\n",
-    "df_fake = pd.read_csv(\"../dataset/fake_\" + selected_file + \".csv\")\n"
-   ],
-   "id": "fb6a3ed4a38efb1c",
-   "outputs": [],
    "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-13T06:30:13.803789Z",
-     "start_time": "2025-06-13T06:30:13.780443Z"
+     "end_time": "2025-06-13T14:34:01.060571Z",
+     "start_time": "2025-06-13T14:34:01.003106Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df_m = \"df_min\"\n",
+    "df_majority = \"df_majority\"\n",
+    "\n",
+    "selected_file = df_m\n",
+    "files = [df_m, df_majority]\n",
+    "df= pd.read_csv(\"../dataset/\" + selected_file + \".csv\")\n",
+    "df_fake = pd.read_csv(\"../dataset/fake_\" + selected_file + \".csv\")\n"
+   ],
+   "id": "fb6a3ed4a38efb1c",
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-13T14:34:02.329874Z",
+     "start_time": "2025-06-13T14:34:02.302415Z"
     }
    },
    "cell_type": "code",
@@ -153,18 +149,18 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-13T06:30:13.875726Z",
-     "start_time": "2025-06-13T06:30:13.864727Z"
+     "end_time": "2025-06-13T14:34:03.547295Z",
+     "start_time": "2025-06-13T14:34:03.535289Z"
     }
    },
    "cell_type": "code",
@@ -174,19 +170,19 @@
     {
      "data": {
       "text/plain": [
-       "   type      amount  oldbalanceOrg  newbalanceOrig  oldbalanceDest  \\\n",
-       "0     1   251990.99      155132.84             0.0        61981.85   \n",
-       "1     1   613909.96      987908.15             0.0      2401046.01   \n",
-       "2     1   444033.83     4768137.50             0.0      2129494.57   \n",
-       "3     1  9763639.57      272883.12             0.0      3813779.10   \n",
-       "4     1  2998113.92    10000000.00             0.0       236578.90   \n",
+       "   type     amount  oldbalanceOrg  newbalanceOrig  oldbalanceDest  \\\n",
+       "0     4  479982.30      792001.28            0.00            0.00   \n",
+       "1     1   44449.46       47688.89            0.00        29086.87   \n",
+       "2     4  982102.67      602964.14            0.00            0.00   \n",
+       "3     4   51395.55      142310.86            0.00        25178.16   \n",
+       "4     4   93283.56      101835.02         7912.79        33998.11   \n",
        "\n",
        "   newbalanceDest  \n",
-       "0       172182.33  \n",
-       "1      3561663.13  \n",
-       "2      5149456.77  \n",
-       "3      8812218.76  \n",
-       "4      2219968.64  "
+       "0        37578.33  \n",
+       "1       242051.44  \n",
+       "2            0.00  \n",
+       "3            0.00  \n",
+       "4        43772.83  "
       ],
       "text/html": [
        "<div>\n",
@@ -218,60 +214,60 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>251990.99</td>\n",
-       "      <td>155132.84</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>61981.85</td>\n",
-       "      <td>172182.33</td>\n",
+       "      <td>4</td>\n",
+       "      <td>479982.30</td>\n",
+       "      <td>792001.28</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>37578.33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>613909.96</td>\n",
-       "      <td>987908.15</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2401046.01</td>\n",
-       "      <td>3561663.13</td>\n",
+       "      <td>44449.46</td>\n",
+       "      <td>47688.89</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>29086.87</td>\n",
+       "      <td>242051.44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>444033.83</td>\n",
-       "      <td>4768137.50</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2129494.57</td>\n",
-       "      <td>5149456.77</td>\n",
+       "      <td>4</td>\n",
+       "      <td>982102.67</td>\n",
+       "      <td>602964.14</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>9763639.57</td>\n",
-       "      <td>272883.12</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3813779.10</td>\n",
-       "      <td>8812218.76</td>\n",
+       "      <td>4</td>\n",
+       "      <td>51395.55</td>\n",
+       "      <td>142310.86</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>25178.16</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2998113.92</td>\n",
-       "      <td>10000000.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>236578.90</td>\n",
-       "      <td>2219968.64</td>\n",
+       "      <td>4</td>\n",
+       "      <td>93283.56</td>\n",
+       "      <td>101835.02</td>\n",
+       "      <td>7912.79</td>\n",
+       "      <td>33998.11</td>\n",
+       "      <td>43772.83</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -287,15 +283,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-13T06:35:15.098744Z",
-     "start_time": "2025-06-13T06:35:15.025247Z"
+     "end_time": "2025-06-13T14:34:09.622083Z",
+     "start_time": "2025-06-13T14:34:09.519633Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from sdmetrics.column_pairs import CorrelationSimilarity\n",
     "correlation_similarities = []\n",
-    "temp_files = [df_0, df_1,df_m_0]\n",
     "for file in files:\n",
     "    df_org = pd.read_csv(\"../dataset/\" + file + \".csv\")\n",
     "    df_org = df_org.drop(columns=[\"Unnamed: 0\"])\n",
@@ -315,39 +310,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "min_0\n",
-      "0.8113009136729484\n",
-      "min_1\n",
-      "0.9698671614621501\n",
-      "min_2\n",
-      "0.7105910476658028\n",
-      "informative_cluster_0\n",
-      "0.9175618982150164\n",
-      "informative_cluster_1\n",
-      "0.9839455171971598\n"
+      "df_min\n",
+      "0.8868432187994814\n",
+      "df_majority\n",
+      "0.994517328976503\n"
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 7
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "Description for previous results:\n",
-    "min_0\n",
-    "0.8113009136729484\n",
-    "min_1\n",
-    "0.9698671614621501\n",
-    "min_2\n",
-    "0.7105910476658028\n",
-    "informative_cluster_0\n",
-    "0.9175618982150164\n",
-    "informative_cluster_1\n",
-    "0.9839455171971598.\n",
-    "\n",
-    "For informative_cluster_1 it's seems perfect that's because the whole cluster is about one type of transactions, so the change between amount and new dest balance is identical (all of them type = 0), and min_1 (type = 4)\n"
-   ],
+   "source": "",
    "id": "4be740ebec91707e"
   },
   {
@@ -363,8 +338,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-13T08:19:28.725083Z",
-     "start_time": "2025-06-13T08:19:28.641478Z"
+     "end_time": "2025-06-13T14:34:22.552448Z",
+     "start_time": "2025-06-13T14:34:22.478391Z"
     }
    },
    "cell_type": "code",
@@ -399,28 +374,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "min_0\n",
-      "0.8975474083438686\n",
-      "min_1\n",
-      "0.8144720020455127\n",
-      "min_2\n",
-      "0.7682997118155619\n",
-      "informative_cluster_0\n",
-      "0.8206978119455943\n",
-      "informative_cluster_1\n",
-      "0.8075280381010908\n"
+      "df_min\n",
+      "0.776914647510045\n",
+      "df_majority\n",
+      "0.7889268292682926\n"
      ]
     }
    ],
-   "execution_count": 34
+   "execution_count": 8
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-13T14:34:23.687414Z",
+     "start_time": "2025-06-13T14:34:23.683411Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "44478c269e861097"
+   "id": "44478c269e861097",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -431,8 +405,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-13T08:29:17.069447Z",
-     "start_time": "2025-06-13T08:29:17.010261Z"
+     "end_time": "2025-06-13T14:34:25.471561Z",
+     "start_time": "2025-06-13T14:34:25.419655Z"
     }
    },
    "cell_type": "code",
@@ -471,42 +445,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "min_0\n",
-      "0.9922191372650104\n",
-      "min_1\n",
-      "0.9824744591102442\n",
-      "min_2\n",
-      "0.9559424494931468\n",
-      "informative_cluster_0\n",
-      "0.9776029461607519\n",
-      "informative_cluster_1\n",
-      "0.9752706893874301\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I:\\ETVOS\\2nd semester\\DS Lab 1\\DSLAB-Project\\venv1\\Lib\\site-packages\\sdmetrics\\single_column\\statistical\\statistic_similarity.py:71: ConstantInputWarning:\n",
-      "\n",
-      "The real data input array is constant. The StatisticSimilarity metric is either undefined or infinite.\n",
-      "\n",
-      "I:\\ETVOS\\2nd semester\\DS Lab 1\\DSLAB-Project\\venv1\\Lib\\site-packages\\sdmetrics\\single_column\\statistical\\statistic_similarity.py:71: ConstantInputWarning:\n",
-      "\n",
-      "The real data input array is constant. The StatisticSimilarity metric is either undefined or infinite.\n",
-      "\n"
+      "df_min\n",
+      "0.989564185181751\n",
+      "df_majority\n",
+      "0.9939953072188615\n"
      ]
     }
    ],
-   "execution_count": 48
+   "execution_count": 9
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-13T14:34:26.419394Z",
+     "start_time": "2025-06-13T14:34:26.416502Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "f3edec491e7800b5"
+   "id": "f3edec491e7800b5",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -521,8 +480,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-13T08:30:31.093648Z",
-     "start_time": "2025-06-13T08:30:31.046551Z"
+     "end_time": "2025-06-13T14:34:27.806933Z",
+     "start_time": "2025-06-13T14:34:27.752470Z"
     }
    },
    "cell_type": "code",
@@ -547,28 +506,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "min_0\n",
-      "1.0\n",
-      "min_1\n",
-      "1.0\n",
-      "min_2\n",
-      "0.8357348703170029\n",
-      "informative_cluster_0\n",
-      "0.9556475458308693\n",
-      "informative_cluster_1\n",
-      "0.9686587801505607\n"
+      "df_min\n",
+      "0.9929380250821868\n",
+      "df_majority\n",
+      "0.9523170731707318\n"
      ]
     }
    ],
-   "execution_count": 49
+   "execution_count": 10
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-13T14:34:28.417035Z",
+     "start_time": "2025-06-13T14:34:28.413145Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "8a6010b3affb24bd"
+   "id": "8a6010b3affb24bd",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -577,12 +535,17 @@
    "id": "e06ee7ca26237f19"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-13T14:34:29.785073Z",
+     "start_time": "2025-06-13T14:34:29.781911Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "aead4c79fe20d596"
+   "id": "aead4c79fe20d596",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -597,8 +560,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-13T08:48:41.501332Z",
-     "start_time": "2025-06-13T08:47:18.909122Z"
+     "end_time": "2025-06-13T14:36:52.931194Z",
+     "start_time": "2025-06-13T14:34:31.323802Z"
     }
    },
    "cell_type": "code",
@@ -626,20 +589,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "min_0\n",
-      "0.29570219169950035\n",
-      "min_1\n",
-      "0.07417768088579563\n",
-      "min_2\n",
-      "0.08696858557018994\n",
-      "informative_cluster_0\n",
-      "0.035160399933495415\n",
-      "informative_cluster_1\n",
-      "0.09974458790874109\n"
+      "df_min\n",
+      "0.0028982807629885535\n",
+      "df_majority\n",
+      "0.003173781414729576\n"
      ]
     }
    ],
-   "execution_count": 50
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -652,12 +609,17 @@
    "id": "111e791bc712bb72"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-13T14:36:52.963970Z",
+     "start_time": "2025-06-13T14:36:52.960807Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "9ef799d107543621"
+   "id": "9ef799d107543621",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -668,8 +630,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-13T08:57:56.458172Z",
-     "start_time": "2025-06-13T08:57:35.915013Z"
+     "end_time": "2025-06-13T14:37:14.089738Z",
+     "start_time": "2025-06-13T14:36:52.983015Z"
     }
    },
    "cell_type": "code",
@@ -698,26 +660,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "min_0\n",
+      "df_min\n",
       "1\n",
-      "min_1\n",
-      "1\n",
-      "min_2\n",
-      "1\n",
-      "informative_cluster_0\n",
-      "1\n",
-      "informative_cluster_1\n",
+      "df_majority\n",
       "1\n"
      ]
     }
    ],
-   "execution_count": 56
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-13T08:57:56.467762Z",
-     "start_time": "2025-06-13T08:57:56.463216Z"
+     "end_time": "2025-06-13T14:37:14.110635Z",
+     "start_time": "2025-06-13T14:37:14.107125Z"
     }
    },
    "cell_type": "code",
@@ -741,8 +697,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-13T06:52:31.342687Z",
-     "start_time": "2025-06-13T06:52:30.927213Z"
+     "end_time": "2025-06-13T14:37:24.260807Z",
+     "start_time": "2025-06-13T14:37:23.989444Z"
     }
    },
    "cell_type": "code",
@@ -766,20 +722,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "min_0\n",
-      "0.8889317766142386\n",
-      "min_1\n",
-      "0.8330160169459988\n",
-      "min_2\n",
-      "0.775145153058809\n",
-      "informative_cluster_0\n",
-      "0.8620684831893219\n",
-      "informative_cluster_1\n",
-      "0.8773356868025748\n"
+      "df_min\n",
+      "0.8575771811363007\n",
+      "df_majority\n",
+      "0.8496341755874961\n"
      ]
     }
    ],
-   "execution_count": 29
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -788,6 +738,41 @@
    "execution_count": null,
    "source": "",
    "id": "957ed182ee2564fd"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "2840e1cb686ddf09"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "92073d51f7344d09"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-13T14:49:00.796407Z",
+     "start_time": "2025-06-13T14:49:00.793386Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "6dcf9270ad7bb75",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "db097f1b4fd91e1e"
   }
  ],
  "metadata": {
