--- a/eval/everything_mixed.ipynb
+++ b/eval/everything_mixed.ipynb
@@ -19,8 +19,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-11T19:19:09.213840Z",
-     "start_time": "2025-06-11T19:19:08.550745Z"
+     "end_time": "2025-06-13T11:51:22.172986Z",
+     "start_time": "2025-06-13T11:51:22.166982Z"
     }
    },
    "source": [
@@ -30,13 +30,13 @@
     "import xgboost as xgb"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-11T19:19:09.279848Z",
-     "start_time": "2025-06-11T19:19:09.230852Z"
+     "end_time": "2025-06-13T11:51:22.510574Z",
+     "start_time": "2025-06-13T11:51:22.478575Z"
     }
    },
    "cell_type": "code",
@@ -51,13 +51,13 @@
    ],
    "id": "fb6a3ed4a38efb1c",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-11T19:19:09.823274Z",
-     "start_time": "2025-06-11T19:19:09.814768Z"
+     "end_time": "2025-06-13T11:51:22.835148Z",
+     "start_time": "2025-06-13T11:51:22.832709Z"
     }
    },
    "cell_type": "code",
@@ -69,8 +69,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-11T19:19:09.880596Z",
-     "start_time": "2025-06-11T19:19:09.856679Z"
+     "end_time": "2025-06-13T11:51:23.365510Z",
+     "start_time": "2025-06-13T11:51:23.355992Z"
     }
    },
    "cell_type": "code",
@@ -176,18 +176,18 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-11T19:19:10.189818Z",
-     "start_time": "2025-06-11T19:19:10.154610Z"
+     "end_time": "2025-06-13T11:51:23.846585Z",
+     "start_time": "2025-06-13T11:51:23.835236Z"
     }
    },
    "cell_type": "code",
@@ -289,12 +289,12 @@
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -308,8 +308,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-11T19:19:16.210555Z",
-     "start_time": "2025-06-11T19:19:10.383196Z"
+     "end_time": "2025-06-13T11:51:29.789411Z",
+     "start_time": "2025-06-13T11:51:26.009262Z"
     }
    },
    "cell_type": "code",
@@ -324,8 +324,8 @@
     "    df_fake = pd.read_csv(\"../dataset/fake_\" + file + \".csv\")\n",
     "    print(file)\n",
     "    correlation_similarity = CorrelationSimilarity.compute(\n",
-    "    real_data=df_org,\n",
-    "    synthetic_data=df_fake,\n",
+    "    real_data=df_org[[\"amount\",\"newbalanceDest\"]],\n",
+    "    synthetic_data=df_fake[[\"amount\",\"newbalanceDest\"]],\n",
     "    coefficient='Spearman'\n",
     "    )\n",
     "    print(correlation_similarity)\n",
@@ -338,11 +338,11 @@
      "output_type": "stream",
      "text": [
       "merged_shuffled\n",
-      "0.9710241659290586\n"
+      "0.9978094711364953\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -353,8 +353,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-11T19:19:16.373264Z",
-     "start_time": "2025-06-11T19:19:16.276230Z"
+     "end_time": "2025-06-13T12:00:00.206649Z",
+     "start_time": "2025-06-13T12:00:00.149196Z"
     }
    },
    "cell_type": "code",
@@ -369,6 +369,8 @@
     "    df_fake = pd.read_csv(\"../dataset/fake_\" + file + \".csv\")\n",
     "    print(file)\n",
     "    for column in df_org.columns:\n",
+    "        if column in [\"type\"]:\n",
+    "            continue\n",
     "        ks_comp = KSComplement.compute(\n",
     "        real_data=df_org[column],\n",
     "        synthetic_data=df_fake[column],\n",
@@ -387,11 +389,11 @@
      "output_type": "stream",
      "text": [
       "merged_shuffled\n",
-      "0.7618554397936596\n"
+      "0.7291780905379882\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 12
   },
   {
    "metadata": {
@@ -415,8 +417,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-11T19:19:16.576667Z",
-     "start_time": "2025-06-11T19:19:16.528714Z"
+     "end_time": "2025-06-13T12:01:02.107964Z",
+     "start_time": "2025-06-13T12:01:02.068386Z"
     }
    },
    "cell_type": "code",
@@ -431,6 +433,8 @@
     "    df_fake = pd.read_csv(\"../dataset/fake_\" + file + \".csv\")\n",
     "    print(file)\n",
     "    for column in df_org.columns:\n",
+    "        if column in [\"type\"]:\n",
+    "            continue\n",
     "        ks_comp = StatisticSimilarity.compute(\n",
     "        real_data=df_org[column],\n",
     "        synthetic_data=df_fake[column],\n",
@@ -449,11 +453,11 @@
      "output_type": "stream",
      "text": [
       "merged_shuffled\n",
-      "0.990544634458446\n"
+      "0.9954317250008998\n"
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 13
   },
   {
    "metadata": {
@@ -559,8 +563,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-11T19:24:49.906357Z",
-     "start_time": "2025-06-11T19:19:16.833425Z"
+     "end_time": "2025-06-13T12:07:34.918244Z",
+     "start_time": "2025-06-13T12:02:44.964618Z"
     }
    },
    "cell_type": "code",
@@ -581,7 +585,7 @@
     "    metadata= Metadata.detect_from_dataframe(df_org).to_dict().get(\"tables\").get(\"table\")\n",
     "    )\n",
     "\n",
-    "    print(ks_comp)\n"
+    "    print(ks_comp['score'])\n"
    ],
    "id": "e12149aee966daa5",
    "outputs": [
@@ -590,11 +594,11 @@
      "output_type": "stream",
      "text": [
       "merged_shuffled\n",
-      "{'score': np.float64(0.0018171444432494605), 'median_DCR_to_real_data': {'synthetic_data': np.float64(0.0005766572148169832), 'random_data_baseline': np.float64(0.3173425299013606)}}\n"
+      "0.001826399455942299\n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 14
   },
   {
    "metadata": {
@@ -618,8 +622,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-11T19:25:16.424195Z",
-     "start_time": "2025-06-11T19:24:50.069153Z"
+     "end_time": "2025-06-13T12:07:59.325145Z",
+     "start_time": "2025-06-13T12:07:34.977717Z"
     }
    },
    "cell_type": "code",
@@ -637,8 +641,8 @@
     "    ks_comp = DisclosureProtection.compute(\n",
     "    real_data=df_org,\n",
     "    synthetic_data=df_fake,\n",
-    "    known_column_names=['newbalanceOrig','oldbalanceOrg'],\n",
-    "    sensitive_column_names=['type','amount'],\n",
+    "    known_column_names=['newbalanceOrig','newbalanceDest','oldbalanceDest'],\n",
+    "    sensitive_column_names=['amount'],\n",
     "    )\n",
     "\n",
     "    print(ks_comp)\n"
@@ -668,13 +672,13 @@
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-11T19:26:39.377085Z",
-     "start_time": "2025-06-11T19:26:38.287059Z"
+     "end_time": "2025-06-13T12:15:57.602193Z",
+     "start_time": "2025-06-13T12:15:56.883538Z"
     }
    },
    "cell_type": "code",
@@ -728,13 +732,13 @@
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-11T19:26:24.189127Z",
-     "start_time": "2025-06-11T19:26:23.576193Z"
+     "end_time": "2025-06-13T12:16:10.369977Z",
+     "start_time": "2025-06-13T12:16:09.689688Z"
     }
    },
    "cell_type": "code",
@@ -788,7 +792,7 @@
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 21
   },
   {
    "metadata": {
